kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: game-2048
  #namespace: game-2048-ns
spec:
  replicas: 2
  selector:
    matchLabels:
      app: game-2048
  template:
    metadata:
      labels:
        app: game-2048
    spec:
      containers:
      - name: game
        image: d3varinti/2048-game:latest
        ports:
        - containerPort: 80
