kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: game-2048-ns
  name: game-2048
spec:
  type: LoadBalancer
  selector:
   app.kubernetes.io/name: game-2048
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
